feat: add 3D particle background and scholar portraits

--- a/cv-explorer/web/index.html
+++ b/cv-explorer/web/index.html
@@ -27,6 +27,8 @@
         </div>
     </header>
 
+    <canvas id="bg-canvas"></canvas>
+
     <div class="snap-container" id="portal-container">
         <!-- Section 1: Overview (Home) -->
         <section id="section-overview" class="snap-section" data-target="overview">
