--- a/cv-explorer/web/index.html
+++ b/cv-explorer/web/index.html
@@ -17,13 +17,22 @@
     <!-- SpaceX-style Portal -->
     <header id="portal-header">
         <div class="header-left">
-            <div class="logo">CV Explorer <span class="version">2014-2024</span></div>
+            <div class="brand-mark">
+                <img src="assets/logo/cv_explorer.png?v=2" alt="CV Explorer 标志">
+                <div class="brand-text">
+                    <span class="brand-title">CV Explorer</span>
+                    <span class="brand-meta">2014-2024</span>
+                </div>
+            </div>
         </div>
         <div class="header-center">
             <span class="project-brief">计算机视觉十年可视化分析图谱</span>
         </div>
         <div class="header-right">
-            <div id="digital-clock">00:00:00</div>
+            <div id="digital-clock" aria-live="polite">
+                <span class="clock-date">0000-00-00</span>
+                <span class="clock-time">00:00:00</span>
+            </div>
         </div>
     </header>
 
@@ -109,15 +118,54 @@
 
     <!-- Scroll Controls -->
     <div class="scroll-controls">
-        <button id="btn-prev" title="Previous View">↑</button>
-        <button id="btn-next" title="Next View">↓</button>
-        <button id="btn-top" title="Back to Top">⤒</button>
-        <button id="btn-bottom" title="Go to Bottom">⤓</button>
+        <button id="btn-prev" class="scroll-btn" data-direction="up" title="上一视图" aria-label="上一视图">
+            <span class="icon" aria-hidden="true">
+                <svg class="icon-svg icon-arrow" viewBox="0 0 24 24" role="presentation" focusable="false">
+                    <line x1="12" y1="6" x2="12" y2="18"></line>
+                    <polyline points="7 11 12 6 17 11"></polyline>
+                </svg>
+            </span>
+            <span class="label">上一视图</span>
+        </button>
+        <button id="btn-next" class="scroll-btn" data-direction="down" title="下一视图" aria-label="下一视图">
+            <span class="icon" aria-hidden="true">
+                <svg class="icon-svg icon-arrow" viewBox="0 0 24 24" role="presentation" focusable="false">
+                    <line x1="12" y1="6" x2="12" y2="18"></line>
+                    <polyline points="7 13 12 18 17 13"></polyline>
+                </svg>
+            </span>
+            <span class="label">下一视图</span>
+        </button>
+        <button id="btn-top" class="scroll-btn" data-direction="top" title="回到顶部" aria-label="回到顶部">
+            <span class="icon" aria-hidden="true">
+                <svg class="icon-svg icon-arrow" viewBox="0 0 24 24" role="presentation" focusable="false">
+                    <line x1="12" y1="7" x2="12" y2="19"></line>
+                    <polyline points="7 12 12 7 17 12"></polyline>
+                    <line class="icon-bar" x1="7" y1="7" x2="17" y2="7"></line>
+                </svg>
+            </span>
+            <span class="label">回到顶部</span>
+        </button>
+        <button id="btn-bottom" class="scroll-btn" data-direction="bottom" title="滑到最底" aria-label="滑到最底">
+            <span class="icon" aria-hidden="true">
+                <svg class="icon-svg icon-arrow" viewBox="0 0 24 24" role="presentation" focusable="false">
+                    <line x1="12" y1="5" x2="12" y2="17"></line>
+                    <polyline points="7 12 12 17 17 12"></polyline>
+                    <line class="icon-bar" x1="7" y1="17" x2="17" y2="17"></line>
+                </svg>
+            </span>
+            <span class="label">滑到最底</span>
+        </button>
     </div>
 
     <!-- App Navigation (Hidden by default in Portal Mode) -->
     <nav class="navbar" style="display: none;">
-        <div class="logo" id="back-to-portal" style="cursor: pointer;" title="返回门户首页">CV Explorer <span>2014-2024</span>
+        <div class="brand-mark" id="back-to-portal" role="button" aria-label="返回门户首页">
+            <img src="assets/logo/cv_explorer.png?v=2" alt="CV Explorer 标志">
+            <div class="brand-text">
+                <span class="brand-title">CV Explorer</span>
+                <span class="brand-meta">2014-2024</span>
+            </div>
         </div>
         <ul class="nav-links">
             <li class="active" data-view="overview">发展概览</li>
