--- a/cv-explorer/web/index.html
+++ b/cv-explorer/web/index.html
@@ -88,7 +88,7 @@
             <div class="section-content">
                 <p class="section-tag">VIEW 05</p>
                 <h1>学术封神榜 · Pantheon</h1>
-                <p class="section-desc">瞻仰 AI 历史上的泰斗级人物与镇山之作，致敬人类智慧的巅峰时刻。</p>
+                <p class="section-desc">博览全球视野，深耕南开视界。瞻仰引领时代的镇山之作，致敬薪火相传的人类智慧巅峰。</p>
                 <button class="enter-view-btn">进入视图</button>
             </div>
             <div class="section-bg"></div>
